[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-citation-server"
version = "0.1.0"
description = "Citation relationship analysis for arXiv papers using Semantic Scholar"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["arxiv", "citations", "semantic-scholar", "mcp", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.8.0",
    "pydantic-settings>=2.1.0",
    "semanticscholar>=0.8.0",
    "arxiv>=2.1.0",
    "pymupdf4llm>=0.0.17",
    "aiofiles>=23.2.1",
    "httpx>=0.24.0",
    "mcp>=1.0.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
arxiv-citation-server = "arxiv_citation_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_citation_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=arxiv_citation_server"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
